latest post plus archive/category page fixes for dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -199,12 +199,15 @@ img {
   max-width: 100%;
 }
 
+pre, code {
+  font-size: 0.8em;
+}
 pre {
+  background-color: var(--lightgrey);
   border-radius: 5px;
-  /* font-size: 0.8rem; */
   margin-bottom: 1em;
+  padding: 2px 4px;
   overflow: auto;
-  padding: 10px;
 }
 
 .small {
